// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP Sinhala Live Radio Page A11y I can see the skip to content link 1`] = `"අන්තර්ගතයට පිවිසෙන්න"`;

exports[`AMP Sinhala Live Radio Page AMP Consent config 1`] = `
{
  "consents": {
    "user-consent": {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": {
    "default": {
      "timeout": {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": {
        "user-consent": [],
      },
    },
  },
}
`;

exports[`AMP Sinhala Live Radio Page AMP Geo config 1`] = `
{
  "AmpBind": true,
  "ISOCountryGroups": {
    "eea": [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
    "gbOrUnknown": [
      "gb",
      "gg",
      "im",
      "je",
      "uk",
      "unknown",
    ],
  },
}
`;

exports[`AMP Sinhala Live Radio Page Analytics ATI 1`] = `
{
  "requests": {
    "base": "https://logws1363.ati-host.net?",
    "pageview": "\${base}s=598343&s2=82&p=sinhala.bbc_sinhala_radio.liveradio.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn%3Abbc%3Aares%3Aws_media%3Alive%3Abbc_sinhala_radio]&x2=[amp]&x3=[news-sinhala]&x4=[si]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[player-live]&x8=[simorgh]&x9=[%E0%B6%B6%E0%B7%93%E0%B6%B6%E0%B7%93%E0%B7%83%E0%B7%93%2520%E0%B7%83%E0%B7%92%E0%B6%82%E0%B7%84%E0%B6%BD%2520%E0%B7%83%E0%B6%82%E0%B6%AF%E0%B7%9A%E0%B7%81%E0%B6%BA%2520-%2520BBC%2520News%2520%E0%B7%83%E0%B7%92%E0%B6%82%E0%B7%84%E0%B6%BD]&ref=\${documentReferrer}",
  },
  "transport": {
    "beacon": false,
    "image": true,
    "xhrpost": false,
  },
  "triggers": {
    "trackPageview": {
      "on": "visible",
      "request": "pageview",
    },
  },
}
`;

exports[`AMP Sinhala Live Radio Page Analytics chartbeat 1`] = `
{
  "vars": {
    "contentType": "player-live",
    "domain": "test.bbc.co.uk",
    "sections": "Sinhala, Sinhala - Radio",
    "title": "බීබීසී සිංහල සංදේශය - BBC News සිංහල",
    "uid": 50924,
    "virtualReferrer": "\${documentReferrer}",
  },
}
`;

exports[`AMP Sinhala Live Radio Page Analytics comscore 1`] = `
{
  "extraUrlParams": {
    "comscorekw": "amp",
  },
  "vars": {
    "c2": "17986528",
  },
}
`;

exports[`AMP Sinhala Live Radio Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, සිංහල",
  "url": "/sinhala",
}
`;

exports[`AMP Sinhala Live Radio Page Footer Anchors should match text and url 2`] = `
{
  "text": "ඔබට බීබීසී විශ්වාස කළ හැක්කේ ඇයි",
  "url": "https://www.bbc.com/sinhala/institutional-50288553",
}
`;

exports[`AMP Sinhala Live Radio Page Footer Anchors should match text and url 3`] = `
{
  "text": "භාවිතයේ කොන්දේසි",
  "url": "https://www.bbc.com/sinhala/institutional-36017568",
}
`;

exports[`AMP Sinhala Live Radio Page Footer Anchors should match text and url 4`] = `
{
  "text": "පෞද්ගලිකත්ව ප්‍රතිපත්තිය",
  "url": "https://www.bbc.com/sinhala/institutional-36019591",
}
`;

exports[`AMP Sinhala Live Radio Page Footer Anchors should match text and url 5`] = `
{
  "text": "කුකීස්",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`AMP Sinhala Live Radio Page Footer Anchors should match text and url 6`] = `
{
  "text": "බීබීසී ය අමතන්න",
  "url": "https://www.bbc.co.uk/sinhala/send/u50853687",
}
`;

exports[`AMP Sinhala Live Radio Page Footer Anchors should match text and url 7`] = `
{
  "text": "බාහිර යොමු කෙරෙහි අපගේ ප්‍රවේශය ගැන කියවන්න.",
  "url": "https://www.bbc.co.uk/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`AMP Sinhala Live Radio Page Footer Cookie Settings Button should match text and on handler 1`] = `
{
  "on": "tap:consent.prompt, privacy.hide, cookie.show, AMP.setState({ isManagingSettings: true })",
  "text": "Do not share or sell my info",
}
`;

exports[`AMP Sinhala Live Radio Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/sinhala"`;

exports[`AMP Sinhala Live Radio Page Footer Paragraphs should match text 1`] = `"© 2024 BBC. බාහිර වෙබ් අඩවිවල අන්තර්ගතයට බීබීසී වගකියනු නොලැබේ. බාහිර යොමු කෙරෙහි අපගේ ප්‍රවේශය ගැන කියවන්න."`;

exports[`AMP Sinhala Live Radio Page Header I can see the branding 1`] = `"BBC News, සිංහල"`;

exports[`AMP Sinhala Live Radio Page Header Navigation link should match text and url 1`] = `
{
  "text": "මුල් පිටුව",
  "url": "/sinhala",
}
`;

exports[`AMP Sinhala Live Radio Page Header Navigation link should match text and url 2`] = `
{
  "text": "ශ්‍රී ලංකා",
  "url": "/sinhala/topics/cg7267dz901t",
}
`;

exports[`AMP Sinhala Live Radio Page Header Navigation link should match text and url 3`] = `
{
  "text": "ලෝකය",
  "url": "/sinhala/topics/c83plvepnq1t",
}
`;

exports[`AMP Sinhala Live Radio Page Header Navigation link should match text and url 4`] = `
{
  "text": "වීඩියෝ",
  "url": "/sinhala/topics/crldzm9n2lnt",
}
`;

exports[`AMP Sinhala Live Radio Page Header Navigation link should match text and url 5`] = `
{
  "text": "කලා",
  "url": "/sinhala/topics/c7zp5zxk8jxt",
}
`;

exports[`AMP Sinhala Live Radio Page Main heading should match text 1`] = `"බීබීසී සිංහල සංදේශය"`;

exports[`AMP Sinhala Live Radio Page Media Player a11y assistive technology can read the media player title 1`] = `"හඬ වාදකය"`;

exports[`AMP Sinhala Live Radio Page Media Player iframe with valid URL should be rendered 1`] = `"https://polling.test.bbc.co.uk/ws/av-embeds/media/bbc_sinhala_radio/liveradio/si/amp?morph_env=live"`;

exports[`AMP Sinhala Live Radio Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/sinhala/images/icons/icon-192x192.png",
}
`;

exports[`AMP Sinhala Live Radio Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/sinhala/images/icons/icon-72x72.png",
}
`;

exports[`AMP Sinhala Live Radio Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/sinhala/images/icons/icon-96x96.png",
}
`;

exports[`AMP Sinhala Live Radio Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/sinhala/images/icons/icon-128x128.png",
}
`;

exports[`AMP Sinhala Live Radio Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/sinhala/images/icons/icon-144x144.png",
}
`;

exports[`AMP Sinhala Live Radio Page SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/sinhala/images/icons/icon-152x152.png",
}
`;

exports[`AMP Sinhala Live Radio Page SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/sinhala/images/icons/icon-180x180.png",
}
`;

exports[`AMP Sinhala Live Radio Page SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/sinhala/images/icons/icon-192x192.png",
}
`;

exports[`AMP Sinhala Live Radio Page SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/sinhala/images/icons/icon-384x384.png",
}
`;

exports[`AMP Sinhala Live Radio Page SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/sinhala/images/icons/icon-512x512.png",
}
`;

exports[`AMP Sinhala Live Radio Page SEO Canonical link 1`] = `"http://localhost:7080/sinhala/bbc_sinhala_radio/liveradio"`;

exports[`AMP Sinhala Live Radio Page SEO Dir attribute 1`] = `"ltr"`;

exports[`AMP Sinhala Live Radio Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP Sinhala Live Radio Page SEO Heading level 1 1`] = `"බීබීසී සිංහල සංදේශය"`;

exports[`AMP Sinhala Live Radio Page SEO Lang attribute 1`] = `"si"`;

exports[`AMP Sinhala Live Radio Page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "RadioChannel",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/sinhala.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "si",
        "name": "Sinhala",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/sinhala/bbc_sinhala_radio/liveradio",
        "@type": "WebPage",
        "name": "බීබීසී සිංහල සංදේශය",
      },
      "url": "http://localhost:7080/sinhala/bbc_sinhala_radio/liveradio",
    },
  ],
}
`;

exports[`AMP Sinhala Live Radio Page SEO OG description 1`] = `"බීබීසී සිංහල ඔස්සේ ශ්‍රී ලාංකීය, දකුණු ආසියාතික සහ ජාත්‍යන්තර පුවත්, විශ්ලේෂණ සහ ක්‍රීඩා පුවත්"`;

exports[`AMP Sinhala Live Radio Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/sinhala.png"`;

exports[`AMP Sinhala Live Radio Page SEO OG image alt 1`] = `"BBC News සිංහල"`;

exports[`AMP Sinhala Live Radio Page SEO OG locale 1`] = `"si-LK"`;

exports[`AMP Sinhala Live Radio Page SEO OG site name 1`] = `"BBC News සිංහල"`;

exports[`AMP Sinhala Live Radio Page SEO OG title 1`] = `"බීබීසී සිංහල සංදේශය - BBC News සිංහල"`;

exports[`AMP Sinhala Live Radio Page SEO OG type 1`] = `"website"`;

exports[`AMP Sinhala Live Radio Page SEO OG url 1`] = `"http://localhost:7080/sinhala/bbc_sinhala_radio/liveradio"`;

exports[`AMP Sinhala Live Radio Page SEO Page title 1`] = `"බීබීසී සිංහල සංදේශය - BBC News සිංහල"`;

exports[`AMP Sinhala Live Radio Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`AMP Sinhala Live Radio Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP Sinhala Live Radio Page SEO Twitter creator 1`] = `"@bbcsinhala"`;

exports[`AMP Sinhala Live Radio Page SEO Twitter description 1`] = `"බීබීසී සිංහල ඔස්සේ ශ්‍රී ලාංකීය, දකුණු ආසියාතික සහ ජාත්‍යන්තර පුවත්, විශ්ලේෂණ සහ ක්‍රීඩා පුවත්"`;

exports[`AMP Sinhala Live Radio Page SEO Twitter image alt 1`] = `"BBC News සිංහල"`;

exports[`AMP Sinhala Live Radio Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/sinhala.png"`;

exports[`AMP Sinhala Live Radio Page SEO Twitter site 1`] = `"@bbcsinhala"`;

exports[`AMP Sinhala Live Radio Page SEO Twitter title 1`] = `"බීබීසී සිංහල සංදේශය - BBC News සිංහල"`;

exports[`AMP Sinhala Live Radio Page Summary should match text 1`] = `"බීබීසී සිංහල ඔස්සේ ශ්‍රී ලාංකීය, දකුණු ආසියාතික සහ ජාත්‍යන්තර පුවත්, විශ්ලේෂණ සහ ක්‍රීඩා පුවත්"`;
